Add form to main script

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,10 @@
     <title></title>
 </head>
 <body>
-
+    <form>
+        {{ form.hidden_tag() }}
+        {{ form.text }}
+        {{ form.submit }}
+    </form>
 </body>
 </html>
