--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,11 @@ h4 {
     font-size: 18px;
 }
 
+textarea {
+    border: 1px solid black;
+    border-radius: 4px;
+}
+
 .bold {
     font-weight: 600;
 }
@@ -29,4 +34,10 @@ h4 {
 .submit {
     width: 100px;
     height: 30px;
+    border: 1px solid black;
+    border-radius: 4px;
+}
+
+.submit:hover {
+    background-color: #cdc8c8;
 }
